--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
     <header class="header">
       <img src="./images/mesto-logo.svg" alt="Логотип сайта Место" class="header__logo">
     </header>
+    <main class="content">
+      <section class="profile">
+        <img src="./images/profile-photo.jpg" alt="Изображения профиля" class="profile__avatar">
+        <div class="profile__info">
+          <h2 class="profile__name">
+            Жак-Ив Кусто
+          </h2>
+          <button class="profile__edit-btn" type="button"></button>
+          <p class="profile__description">
+            Исследователь океана
+          </p>
+        </div>
+        <button class="profile__add-btn" type="button"></button>
+      </section>
+    </main>
   </div>
 </body>
 </html>
