--- a/index.html
+++ b/index.html
@@ -14,17 +14,117 @@
     </header>
     <main class="content">
       <section class="profile">
-        <img src="./images/profile-photo.jpg" alt="Изображения профиля" class="profile__avatar">
+        <img src="./images/Skittle.webp" alt="Изображения профиля" class="profile__avatar">
         <div class="profile__info">
-          <h2 class="profile__name">
-            Жак-Ив Кусто
-          </h2>
-          <button class="profile__edit-btn" type="button"></button>
+          <div class="profile__heading">
+            <h2 class="profile__name">
+              Скиттл
+            </h2>
+            <button class="profile__edit-btn" type="button"></button>
+          </div>
           <p class="profile__description">
-            Исследователь океана
+            Исследователь Земли и не&только
           </p>
         </div>
         <button class="profile__add-btn" type="button"></button>
+      </section>
+      <section class="places">
+        <div class="place">
+          <img src="./images/altai.jpg" alt="Алтай" class="place__image">
+          <div class="place__info">
+            <p class="place__name">
+              Алтай
+            </p>
+            <svg class="place__like" width="22" height="19" viewBox="0 0 22 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991
+              1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583823
+              2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702
+              2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798
+              17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702
+              8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z" fill="black"/>
+            </svg>
+          </div>
+        </div>
+        <div class="place">
+          <img src="./images/baikal.jpg" alt="Замерзшее озеро" class="place__image">
+          <div class="place__info">
+            <p class="place__name">
+              Байкал
+            </p>
+            <svg class="place__like" width="22" height="19" viewBox="0 0 22 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991
+              1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583823
+              2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702
+              2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798
+              17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702
+              8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z" fill="black"/>
+            </svg>
+          </div>
+        </div>
+        <div class="place">
+          <img src="./images/elbrus.jpg" alt="Горный пейзаж" class="place__image">
+          <div class="place__info">
+            <p class="place__name">
+              Эльбрус
+            </p>
+            <svg class="place__like" width="22" height="19" viewBox="0 0 22 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991
+              1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583823
+              2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702
+              2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798
+              17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702
+              8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z" fill="black"/>
+            </svg>
+          </div>
+        </div>
+        <div class="place">
+          <img src="./images/kamchatka.jpg" alt="Камчатский пейзаж" class="place__image">
+          <div class="place__info">
+            <p class="place__name">
+              Камчатка
+            </p>
+            <svg class="place__like" width="22" height="19" viewBox="0 0 22 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991
+              1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583823
+              2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702
+              2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798
+              17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702
+              8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z" fill="black"/>
+            </svg>
+          </div>
+        </div>
+        <div class="place">
+          <img src="./images/sheregesh.jpg" alt="Снежный горный пейзаж" class="place__image">
+          <div class="place__info">
+            <p class="place__name">
+              Шерегеш
+            </p>
+            <svg class="place__like" width="22" height="19" viewBox="0 0 22 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991
+              1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583823
+              2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702
+              2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798
+              17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702
+              8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z" fill="black"/>
+            </svg>
+          </div>
+        </div>
+        <div class="place">
+          <img src="./images/sudak.jpg" alt="Море и побережье" class="place__image">
+          <div class="place__info">
+            <p class="place__name">
+              Судак
+            </p>
+            <svg class="place__like" width="22" height="19" viewBox="0 0 22 19" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M20.2991 9.78586C22.567 7.54338 22.567 3.90213 20.2991
+              1.68186C18.0311 -0.560619 14.3486 -0.560619 12.0806 1.68186L10.9804 2.792L9.88007 1.70406C7.61215 -0.560619 3.92957 -0.560619 1.6841 1.68186C0.583823
+              2.76979 0 4.21297 0 5.74496C0 7.27695 0.606277 8.72013 1.6841 9.80806L10.9804 19L20.2991 9.78586ZM1.4371 5.74496C1.4371 4.59042 1.8862 3.52469 2.71702
+              2.72539C3.5703 1.88168 4.67058 1.45983 5.77086 1.45983C6.87114 1.45983 7.97142 1.88168 8.8247 2.72539L10.9804 4.83465L13.136 2.70318C14.8201 1.03798
+              17.582 1.03798 19.2437 2.70318C20.0521 3.50248 20.5236 4.56822 20.5236 5.72276C20.5236 6.8773 20.0745 7.94303 19.2437 8.74233L10.9804 16.9351L2.71702
+              8.76453C1.90865 7.94303 1.4371 6.8773 1.4371 5.74496Z" fill="black"/>
+            </svg>
+          </div>
+        </div>
       </section>
     </main>
   </div>
