feat: add footer

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <button class="profile__edit-btn" type="button"></button>
           </div>
           <p class="profile__description">
-            Исследователь Земли и не&только
+            Исследователь Земли и&nbsp;не&nbsp;только
           </p>
         </div>
         <button class="profile__add-btn" type="button"></button>
@@ -127,6 +127,11 @@
         </div>
       </section>
     </main>
+    <footer class="footer">
+      <p class="footer__copyright">
+        © 2020 Mesto Russia
+      </p>
+    </footer>
   </div>
 </body>
 </html>
