feat: add hover effects on buttons

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <p class="place__name">
               Байкал
             </p>
-            <div class="place__like"></div>
+            <button type="button" class="place__like"></button>
           </div>
         </div>
         <div class="place">
@@ -53,7 +53,7 @@
             <p class="place__name">
               Эльбрус
             </p>
-            <div class="place__like"></div>
+            <button type="button" class="place__like"></button>
           </div>
         </div>
         <div class="place">
@@ -62,7 +62,7 @@
             <p class="place__name">
               Камчатка
             </p>
-            <div class="place__like"></div>
+            <button type="button" class="place__like"></button>
           </div>
         </div>
         <div class="place">
@@ -71,7 +71,7 @@
             <p class="place__name">
               Шерегеш
             </p>
-            <div class="place__like"></div>
+            <button type="button" class="place__like"></button>
           </div>
         </div>
         <div class="place">
@@ -80,7 +80,7 @@
             <p class="place__name">
               Судак
             </p>
-            <div class="place__like"></div>
+            <button type="button" class="place__like"></button>
           </div>
         </div>
       </section>
