--- a/index.html
+++ b/index.html
@@ -17,14 +17,10 @@
         <img src="./images/Skittle.webp" alt="Изображения профиля" class="profile__avatar">
         <div class="profile__info">
           <div class="profile__heading">
-            <h2 class="profile__name">
-              Скиттл
-            </h2>
+            <h2 class="profile__name">Скиттл</h2>
             <button class="profile__edit-btn" type="button"></button>
           </div>
-          <p class="profile__description">
-            Исследователь Земли и&nbsp;не&nbsp;только
-          </p>
+          <p class="profile__description">Исследователь Земли и&nbsp;не&nbsp;только</p>
         </div>
         <button class="profile__add-btn" type="button"></button>
       </section>
@@ -84,7 +80,7 @@
           </div>
         </div>
       </section>
-      <div class="popup popup_visible">
+      <div class="popup">
         <form action="" class="popup__form">
           <h3 class="popup__title">
             Редактировать профиль
@@ -104,5 +100,6 @@
       </p>
     </footer>
   </div>
+  <script src="./js/index.js"></script>
 </body>
 </html>
