refactor: remove repeating style properties and fill action attribute

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
       </section>
       <div class="popup">
-        <form action="" class="popup__form">
+        <form action="#" class="popup__form">
           <h3 class="popup__title">
             Редактировать профиль
           </h3>
