fix: do lots of small corrections

--- a/index.html
+++ b/index.html
@@ -25,80 +25,82 @@
         <button class="profile__add-btn" type="button"></button>
       </section>
       <section class="places">
-        <div class="place">
+        <article class="place">
           <img src="./images/altai.jpg" alt="Алтай" class="place__image">
           <div class="place__info">
-            <p class="place__name">
+            <h2 class="place__name">
               Алтай
-            </p>
-            <div class="place__like"></div>
+            </h2>
+            <button class="place__like"></button>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <img src="./images/baikal.jpg" alt="Замерзшее озеро" class="place__image">
           <div class="place__info">
-            <p class="place__name">
+            <h2 class="place__name">
               Байкал
-            </p>
+            </h2>
             <button type="button" class="place__like"></button>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <img src="./images/elbrus.jpg" alt="Горный пейзаж" class="place__image">
           <div class="place__info">
-            <p class="place__name">
+            <h2 class="place__name">
               Эльбрус
-            </p>
+            </h2>
             <button type="button" class="place__like"></button>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <img src="./images/kamchatka.jpg" alt="Камчатский пейзаж" class="place__image">
           <div class="place__info">
-            <p class="place__name">
+            <h2 class="place__name">
               Камчатка
-            </p>
+            </h2>
             <button type="button" class="place__like"></button>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <img src="./images/sheregesh.jpg" alt="Снежный горный пейзаж" class="place__image">
           <div class="place__info">
-            <p class="place__name">
+            <h2 class="place__name">
               Шерегеш
-            </p>
+            </h2>
             <button type="button" class="place__like"></button>
           </div>
-        </div>
-        <div class="place">
+        </article>
+        <article class="place">
           <img src="./images/sudak.jpg" alt="Море и побережье" class="place__image">
           <div class="place__info">
-            <p class="place__name">
+            <h2 class="place__name">
               Судак
-            </p>
+            </h2>
             <button type="button" class="place__like"></button>
           </div>
-        </div>
+        </article>
       </section>
-      <div class="popup">
-        <form action="#" class="popup__form">
-          <h3 class="popup__title">
-            Редактировать профиль
-          </h3>
-          <input type="text" class="popup__input" id="popup-name" name="popup-name" value="">
-          <input type="text" class="popup__input" id="popup-about" name="popup-about" value="">
-          <button class="popup__submit-btn" type="submit">
-            Сохранить
-          </button>
-          <img src="./images/close-icon.png" alt="крестик" class="popup__close">
-        </form>
-      </div>
     </main>
     <footer class="footer">
       <p class="footer__copyright">
-        © 2020 Mesto Russia
+        &#169; 2020 Mesto Russia
       </p>
     </footer>
+    <div class="popup">
+      <div class="popup__container">
+        <button class="popup__close" type="button"></button>
+        <form action="#" name="profileEditing" class="popup__form">
+          <h3 class="popup__title">
+            Редактировать профиль
+          </h3>
+          <input type="text" class="popup__input popup__input_kind_name" id="popup-name" name="popup-name" value="" placeholder="Имя" required>
+          <input type="text" class="popup__input popup__input_kind_about" id="popup-about" name="popup-about" value="" placeholder="Работа" required>
+          <button class="popup__submit-btn" type="submit">
+            Сохранить
+          </button>
+        </form>
+      </div>
+    </div>
   </div>
   <script src="./js/index.js"></script>
 </body>
