fix: add type attrubut to button and increse popup width

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h2 class="place__name">
               Алтай
             </h2>
-            <button class="place__like"></button>
+            <button type="button" class="place__like"></button>
           </div>
         </article>
         <article class="place">
