feat: add initial cards

--- a/index.html
+++ b/index.html
@@ -25,60 +25,9 @@
         <button class="profile__add-btn" type="button"></button>
       </section>
       <section class="places">
-        <article class="place">
-          <img src="./images/altai.jpg" alt="Алтай" class="place__image">
-          <div class="place__info">
-            <h2 class="place__name">
-              Алтай
-            </h2>
-            <button type="button" class="place__like"></button>
-          </div>
-        </article>
-        <article class="place">
-          <img src="./images/baikal.jpg" alt="Замерзшее озеро" class="place__image">
-          <div class="place__info">
-            <h2 class="place__name">
-              Байкал
-            </h2>
-            <button type="button" class="place__like"></button>
-          </div>
-        </article>
-        <article class="place">
-          <img src="./images/elbrus.jpg" alt="Горный пейзаж" class="place__image">
-          <div class="place__info">
-            <h2 class="place__name">
-              Эльбрус
-            </h2>
-            <button type="button" class="place__like"></button>
-          </div>
-        </article>
-        <article class="place">
-          <img src="./images/kamchatka.jpg" alt="Камчатский пейзаж" class="place__image">
-          <div class="place__info">
-            <h2 class="place__name">
-              Камчатка
-            </h2>
-            <button type="button" class="place__like"></button>
-          </div>
-        </article>
-        <article class="place">
-          <img src="./images/sheregesh.jpg" alt="Снежный горный пейзаж" class="place__image">
-          <div class="place__info">
-            <h2 class="place__name">
-              Шерегеш
-            </h2>
-            <button type="button" class="place__like"></button>
-          </div>
-        </article>
-        <article class="place">
-          <img src="./images/sudak.jpg" alt="Море и побережье" class="place__image">
-          <div class="place__info">
-            <h2 class="place__name">
-              Судак
-            </h2>
-            <button type="button" class="place__like"></button>
-          </div>
-        </article>
+        <ul class="places__list">
+
+        </ul>
       </section>
     </main>
     <footer class="footer">
@@ -102,6 +51,17 @@
       </div>
     </div>
   </div>
+  <template id="place">
+    <li class="place">
+      <img src="#" alt="Алтай" class="place__image">
+      <div class="place__info">
+        <h2 class="place__name">
+
+        </h2>
+        <button type="button" class="place__like"></button>
+      </div>
+    </li>
+  </template>
   <script src="./js/index.js"></script>
 </body>
 </html>
