feat: add functionality to delete cards

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </section>
       <section class="places">
         <ul class="places__list">
-
+          
         </ul>
       </section>
     </main>
@@ -69,6 +69,7 @@
   <template id="place">
     <li class="place">
       <img src="#" alt="Алтай" class="place__image">
+      <img src="./images/trash.svg" alt="Кнопка удалить карточку" class="place__delete">
       <div class="place__info">
         <h2 class="place__name">
 
