add picture popup

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </section>
       <section class="places">
         <ul class="places__list">
-          
+
         </ul>
       </section>
     </main>
@@ -63,6 +63,17 @@
             Создать
           </button>
         </form>
+      </div>
+    </div>
+    <div class="popup popup_sort_picture">
+      <div class="popup__container popup__container_size_full">
+        <button class="popup__close" type="button"></button>
+        <figure class="zoomed-picture">
+          <img class="zoomed-picture__image" src="#" alt="#">
+          <figcaption class="zoomed-picture__caption">
+
+          </figcaption>
+        </figure>
       </div>
     </div>
   </div>
