add smoothness to the popup

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
           <h3 class="popup__title">
             Редактировать профиль
           </h3>
-          <input type="text" class="popup__input popup__input_kind_name" id="popup-name" name="popup-name" value="" placeholder="Имя" required>
-          <input type="text" class="popup__input popup__input_kind_about" id="popup-about" name="popup-about" value="" placeholder="Работа" required>
+          <input type="text" class="popup__input popup__input_kind_name" name="popup-name" value="" placeholder="Имя" required>
+          <input type="text" class="popup__input popup__input_kind_about" name="popup-about" value="" placeholder="Работа" required>
           <button class="popup__submit-btn" type="submit">
             Сохранить
           </button>
@@ -57,8 +57,8 @@
           <h3 class="popup__title">
             Новое место
           </h3>
-          <input type="text" class="popup__input popup__input_kind_name" id="popup-name" name="popup-name" value="" placeholder="Название" required>
-          <input type="text" class="popup__input popup__input_kind_link" id="popup-about" name="popup-about" value="" placeholder="Ссылка на картинку" required>
+          <input type="text" class="popup__input popup__input_kind_name" name="popup-name" value="" placeholder="Название" required>
+          <input type="text" class="popup__input popup__input_kind_link" name="popup-about" value="" placeholder="Ссылка на картинку" required>
           <button class="popup__submit-btn" type="submit">
             Создать
           </button>
