fix: fix some mistakes

--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
     <div class="popup popup_sort_place">
       <div class="popup__container">
         <button class="popup__close" type="button"></button>
-        <form action="#" name="profileEditing" class="popup__form">
+        <form action="#" name="placeAdding" class="popup__form">
           <h3 class="popup__title">
             Новое место
           </h3>
-          <input type="text" class="popup__input popup__input_kind_name" name="popup-name" value="" placeholder="Название" required>
-          <input type="text" class="popup__input popup__input_kind_link" name="popup-about" value="" placeholder="Ссылка на картинку" required>
+          <input type="text" class="popup__input popup__input_kind_name" name="place-name" value="" placeholder="Название" required>
+          <input type="text" class="popup__input popup__input_kind_link" name="place-link" value="" placeholder="Ссылка на картинку" required>
           <button class="popup__submit-btn" type="submit">
             Создать
           </button>
@@ -89,6 +89,6 @@
       </div>
     </li>
   </template>
-  <script src="./js/index.js"></script>
+  <script type="module" src="./js/index.js"></script>
 </body>
 </html>
