--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
           <h3 class="popup__title">
             Редактировать профиль
           </h3>
-          <label class="popup__input-container">
+          <div class="popup__input-container">
             <input type="text" class="popup__input popup__input_kind_name" name="name" value="" placeholder="Имя" required minlength="2" maxlength="40">
             <span class="popup__error name-input-error"></span>
-          </label>
-          <label class="popup__input-container">
+          </div>
+          <div class="popup__input-container">
             <input type="text" class="popup__input popup__input_kind_about" name="about" value="" placeholder="Работа" required minlength="2" maxlength="200">
             <span class="popup__error about-input-error"></span>
-          </label>
+          </div>
           <button class="popup__submit-btn" type="submit">
             Сохранить
           </button>
@@ -65,14 +65,14 @@
           <h3 class="popup__title">
             Новое место
           </h3>
-          <label class="popup__input-container">
+          <div class="popup__input-container">
             <input type="text" class="popup__input popup__input_kind_name" name="place" value="" placeholder="Название" required minlength="2" maxlength="30">
             <span class="popup__error place-input-error"></span>
-          </label>
-          <label class="popup__input-container">
+          </div>
+          <div class="popup__input-container">
             <input type="url" class="popup__input popup__input_kind_link" name="link" value="" placeholder="Ссылка на картинку" required>
             <span class="popup__error link-input-error"></span>
-          </label>
+          </div>
           <button class="popup__submit-btn" type="submit">
             Создать
           </button>
