--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
   <link rel="stylesheet" href="./pages/index.css">
+  <link rel="icon" href="./images/label.png">
   <script type="module" src="./js/index.js"></script>
-  <script defer src="./js/validate.js"></script>
 </head>
 <body>
   <div class="page">
