--- a/src/index.html
+++ b/src/index.html
@@ -5,18 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mesto</title>
-  <link rel="stylesheet" href="./pages/index.css">
-  <link rel="icon" href="./images/label.png">
-  <script type="module" src="./js/index.js"></script>
+  <link rel="icon" href="<%=require('./images/label.png')%>">
 </head>
 <body>
   <div class="page">
     <header class="header">
-      <img src="./images/mesto-logo.svg" alt="Логотип сайта Место" class="header__logo">
+      <img src="<%=require('./images/mesto-logo.svg')%>" alt="Логотип сайта Место" class="header__logo">
     </header>
     <main class="content">
       <section class="profile">
-        <img src="./images/Skittle.webp" alt="Изображения профиля" class="profile__avatar">
+        <img src="<%=require('./images/skittle.webp')%>" alt="Изображения профиля" class="profile__avatar">
         <div class="profile__info">
           <div class="profile__heading">
             <h1 class="profile__name">Скиттл</h1>
@@ -94,7 +92,7 @@
   <template id="place">
     <li class="place">
       <img src="#" alt="Алтай" class="place__image">
-      <img src="./images/trash.svg" alt="Кнопка удалить карточку" class="place__delete">
+      <img src="<%=require('./images/trash.svg')%>" alt="Кнопка удалить карточку" class="place__delete">
       <div class="place__info">
         <h2 class="place__name">
 
