refactor: break project into components

--- a/src/index.html
+++ b/src/index.html
@@ -43,12 +43,12 @@
             Редактировать профиль
           </h3>
           <div class="popup__input-container">
-            <input type="text" class="popup__input popup__input_kind_name" name="name" value="" placeholder="Имя" required minlength="2" maxlength="40">
-            <span class="popup__error name-input-error"></span>
+            <input type="text" class="popup__input popup__input_kind_name" name="profileName" value="" placeholder="Имя" required minlength="2" maxlength="40">
+            <span class="popup__error profileName-input-error"></span>
           </div>
           <div class="popup__input-container">
-            <input type="text" class="popup__input popup__input_kind_about" name="about" value="" placeholder="Работа" required minlength="2" maxlength="200">
-            <span class="popup__error about-input-error"></span>
+            <input type="text" class="popup__input popup__input_kind_about" name="profileAbout" value="" placeholder="Работа" required minlength="2" maxlength="200">
+            <span class="popup__error profileAbout-input-error"></span>
           </div>
           <button class="popup__submit-btn" type="submit">
             Сохранить
@@ -64,12 +64,12 @@
             Новое место
           </h3>
           <div class="popup__input-container">
-            <input type="text" class="popup__input popup__input_kind_name" name="place" value="" placeholder="Название" required minlength="2" maxlength="30">
-            <span class="popup__error place-input-error"></span>
+            <input type="text" class="popup__input popup__input_kind_name" name="placeName" value="" placeholder="Название" required minlength="2" maxlength="30">
+            <span class="popup__error placeName-input-error"></span>
           </div>
           <div class="popup__input-container">
-            <input type="url" class="popup__input popup__input_kind_link" name="link" value="" placeholder="Ссылка на картинку" required>
-            <span class="popup__error link-input-error"></span>
+            <input type="url" class="popup__input popup__input_kind_link" name="placeLink" value="" placeholder="Ссылка на картинку" required>
+            <span class="popup__error placeLink-input-error"></span>
           </div>
           <button class="popup__submit-btn" type="submit">
             Создать
